JAVADOCS EVERYWHERE!!!!!